--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
 body{
     background-color: #333;
 }
+
 .container{
     background-color: #555;
     color: #ddd;
@@ -17,25 +18,33 @@ body{
     font-family: 'Montserrat', sans-serif;
     max-width: 700px;
 }
+
 .container > p{
     font-size: 32px;
+    margin-bottom: 20px;
 }
+
 .question{
     width: 75%;
+    margin-bottom: 20px;
 }
+
 .options{
     position: relative;
     padding-left: 40px;
 }
+
 #options label{
     display: block;
     margin-bottom: 15px;
     font-size: 14px;
     cursor: pointer;
 }
+
 .options input{
     opacity: 0;
 }
+
 .checkmark {
     position: absolute;
     top: -1px;
@@ -46,42 +55,58 @@ body{
     border: 1px solid #ddd;
     border-radius: 50%;
 }
+
 .options input:checked ~ .checkmark:after {
     display: block;
 }
+
 .options .checkmark:after{
     content: "";
-	width: 10px;
+    width: 10px;
     height: 10px;
     display: block;
-	background: white;
+    background: white;
     position: absolute;
     top: 50%;
-	left: 50%;
+    left: 50%;
     border-radius: 50%;
     transform: translate(-50%,-50%) scale(0);
     transition: 300ms ease-in-out 0s;
 }
+
 .options input[type="radio"]:checked ~ .checkmark{
     background: #21bf73;
     transition: 300ms ease-in-out 0s;
 }
+
 .options input[type="radio"]:checked ~ .checkmark:after{
     transform: translate(-50%,-50%) scale(1);
 }
+
 .btn-primary{
     background-color: #555;
     color: #ddd;
     border: 1px solid #ddd;
+    padding: 5px 10px;
+    font-size: 14px;
+    cursor: pointer;
 }
+
 .btn-primary:hover{
     background-color: #21bf73;
     border: 1px solid #21bf73;
 }
+
 .btn-success{
     padding: 5px 25px;
     background-color: #21bf73;
+    color: #ddd;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
 }
+
 @media(max-width:576px){
     .question{
         width: 100%;
